@@ -1,0 +1,63 @@
+
+# Query 1: 0 QPS, 0x concurrency, ID 0x7F7D57ACDD8A346E at byte 0 ________
+# This item is included in the report because it matches --limit.
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         50       1
+# Exec time     50      2s      2s      2s      2s      2s       0      2s
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent     50       1       1       1       1       1       0       1
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1    root
+# Databases      1    test
+# Time range 2007-10-15 21:43:52 to 2007-10-15 21:43:52
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s  ################################################################
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `test` LIKE 'n'\G
+#    SHOW CREATE TABLE `test`.`n`\G
+# EXPLAIN
+select sleep(2) from n\G
+*************************** 1. row ***************************
+             id: 1
+    select_type: SIMPLE
+          table: n
+           type: ALL
+  possible_keys: NULL
+            key: NULL
+        key_len: NULL
+            ref: NULL
+           rows: 2
+          Extra: 
+
+# Query 2: 0 QPS, 0x concurrency, ID 0x3A99CC42AEDCCFCD at byte 359 ______
+# This item is included in the report because it matches --limit.
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         50       1
+# Exec time     50      2s      2s      2s      2s      2s       0      2s
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent     50       1       1       1       1       1       0       1
+# Rows exam      0       0       0       0       0       0       0       0
+# Users          1    root
+# Databases      1  sakila
+# Time range 2007-10-15 21:45:10 to 2007-10-15 21:45:10
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s  ################################################################
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `test` LIKE 'n'\G
+#    SHOW CREATE TABLE `test`.`n`\G
+# EXPLAIN
+select sleep(2) from test.n\G
