@@ -1,5 +1,6 @@
 Changelog for mk-query-digest:
 
+   * Added --explain to print the EXPLAIN in the report (issue 199).
    * Added 'bytes' property to log events (issue 247).
    * Some INSERT/REPLACE queries were not truncated (issue 216).
    * INSERT/REPLACE were needlessly converted for EXPLAIN (issue 283).
